# tipsy-ab-config-sdk

./: .gitignore  AGENTS.md  Makefile  README.md  _pr-review-probe.md  go.work
.githooks/: README.md  pre-commit  pre-push
.github/workflows/: agentic-pr-review.yml  go-test.yml  java-sdk.yml  python-sdk.yml
docs/: dev-http-token.md  usage-and-integration.md
docs/superpowers/specs/: 2026-06-18-sdk-dev-e2e-design.md  2026-06-18-sdk-dev-e2e-report.md
docs/tech-notes/: grpc-load-balancing-and-push.md
scripts/: check-pr-ci.sh  gen-proto-py.sh  gen-proto.sh  test-hooks.sh
sdk/go/example/: go.mod  go.sum  main.go
sdk/go/tipsyabconfig/: CHANGELOG.md  abtest_context.go  abtest_context_traceid_test.go  cache.go  cache_test.go  env_field_test.go  errors.go  experiment_result.go  experiment_result_traceid_test.go  exposure.go  exposure_test.go  exposure_traceid_test.go  (+37 more)
sdk/java/: .gitignore  README.md  RELEASING.md  pom.xml
sdk/python/: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASING.md  pyproject.toml
sdk/python/example/: main.py
sdk/python/tests/: __init__.py  conftest.py  test_abtest_context.py  test_abtest_context_traceid.py  test_backoff_reset.py  test_cache.py  test_env_field.py  test_exposure.py  test_fastapi.py  test_fastapi_middleware_traceid.py  test_get_config.py  test_get_experiment_result_traceid.py  test_grpc_target.py  test_heartbeat.py  test_http_transport.py  test_metrics.py  test_new_abtest_context_traceid.py  test_packaging.py  test_prefetch.py  test_pull.py  test_pull_subscribe_traceid.py  test_rpc_timing_log.py  test_service_config.py  test_subscribe.py  test_subscribe_backoff_reset.py  test_typed_config.py  test_v2_namespace.py  test_version_sync.py
sdk/python/tipsy_ab_config/: __init__.py  _http_transport.py  abtest_context.py  cache.py  client.py  exceptions.py  exposure.py  fastapi_middleware.py  metrics.py
sdk/python/tipsy_ab_config/_proto/tipsy/abtest/v1/: abtest_pb2.py  abtest_pb2_grpc.py
sdk/python/tipsy_ab_config/_proto/tipsy/config/v1/: config_pb2.py  config_pb2_grpc.py
test/dev-e2e/: README.md  RESULTS.md
(+208 files in other folders)
