[build-system]
requires = ["setuptools>=68,<80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tipsy-ab-config"
version = "0.11.0"
description = "Tipsy AB-config Python SDK — local config cache + abtest Compute client"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Tipsy AB-config team" }]
license = { text = "MIT" }
keywords = ["abtest", "feature-flag", "config", "grpc", "tipsy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]
dependencies = [
    "grpcio>=1.60,<2",
    "protobuf>=5.29,<7",
]

[project.urls]
Homepage = "https://github.com/Lightspeed-Intelligence/tipsy-ab-config-sdk"
Documentation = "https://github.com/Lightspeed-Intelligence/tipsy-ab-config-sdk/tree/main/sdk/python"
Source = "https://github.com/Lightspeed-Intelligence/tipsy-ab-config-sdk"
Issues = "https://github.com/Lightspeed-Intelligence/tipsy-ab-config-sdk/issues"
Changelog = "https://github.com/Lightspeed-Intelligence/tipsy-ab-config-sdk/blob/main/sdk/python/CHANGELOG.md"

[project.optional-dependencies]
fastapi = ["starlette>=0.36,<1"]
http = ["httpx>=0.27,<1"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "grpcio-tools==1.66.2",
    "tomli; python_version < '3.11'",
    "httpx>=0.27,<1",
    "build>=1.2",
    "wheel>=0.44",
    "twine>=5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tipsy_ab_config", "tipsy_ab_config.*"]

[tool.setuptools.package-data]
tipsy_ab_config = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["packaging: requires `python -m build` to run; opt-in only"]
addopts = "-m 'not packaging'"
